tests/neg-custom-args/captures/mutable-inheritance.check
-- Error: tests/neg-custom-args/captures/mutable-inheritance.scala:3:16 ------------------------------------------------
3 |class A extends E, caps.Mutable // error
  |                ^
  |                illegal inheritance: class A which extends `Mutable` is not allowed to also extend class E
  |                since class E retains exclusive capabilities but does not extend `Mutable`.
-- Error: tests/neg-custom-args/captures/mutable-inheritance.scala:6:16 ------------------------------------------------
6 |class C extends B(??? : Int => Int), caps.Mutable // error
  |                ^^^^^^^^^^^^^^^^^^^
  |                illegal inheritance: class C which extends `Mutable` is not allowed to also extend class B
  |                since class B retains exclusive capabilities but does not extend `Mutable`.
-- Error: tests/neg-custom-args/captures/mutable-inheritance.scala:17:16 -----------------------------------------------
17 |class H extends G, caps.Mutable // error
   |                ^
   |                illegal inheritance: class H which extends `Mutable` is not allowed to also extend class G
   |                since class G retains exclusive capabilities but does not extend `Mutable`.
